--- a/src/components/header/web/web.css
+++ b/src/components/header/web/web.css
@@ -15,6 +15,11 @@
     color: black;
     display: flex;
     align-items: center;
+    transition: color 0.3s ease-in;
+}
+
+.web-option a:hover {
+    color: rgb(109, 107, 107);
 }
 
 .option-icon {
