--- a/src/components/body/contact/contact.css
+++ b/src/components/body/contact/contact.css
@@ -30,11 +30,16 @@
     display: flex;
     justify-content: center;
     border-radius: 4px;
+    transition: all 0.3s ease-in;
 }
 
 .download a {
     text-decoration: none;
     color: black;
+}
+
+.download:hover {
+    filter: brightness(85%);
 }
 
 @media only screen and (max-width: 720px) {
