--- a/src/components/body/work/work-card.css
+++ b/src/components/body/work/work-card.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row-reverse;
+    flex-direction: column-reverse;
 }
 
 .work-logo {
@@ -22,6 +22,10 @@
     color: gray;
 }
 
+.company-name {
+    font-weight: 600;
+}
+
 .work-description {
     text-align: left;
     display: -webkit-box;
@@ -35,5 +39,9 @@
 @media only screen and (max-width: 720px) {
     .work-card {
         width: 100%;
+        flex-direction: column;
+    }
+    .work-logo {
+        margin-bottom: 20px;
     }
 }
