--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -28,7 +28,7 @@
 .logo {
     display: flex;
     font-size: 36px;
-    color: blueviolet;
+    color: blue;
     font-weight: 800;
     text-transform: uppercase;
 }
