--- a/src/components/header/mobile/mobile.css
+++ b/src/components/header/mobile/mobile.css
@@ -1,40 +1,69 @@
+.d-none {
+  display: none;
+}
 .mobile {
-    background-color: white;
-    height: 100vh;
-    width: 60vw;
-    position: absolute;
-    right: 0px;
-    top: -6px;
-    padding: 18px 12px;
-    display: flex;
-    flex-direction: column;
-    z-index: 999;
+  background-color: white;
+  height: 100vh;
+  width: 60vw;
+  position: absolute;
+  right: 0px;
+  top: -6px;
+  padding: 18px 12px;
+  display: flex;
+  flex-direction: column;
+  z-index: 999;
+}
+.fadeIn {
+    animation: fadein 1.3s;
+}
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeOut {
+  animation: fadeout 1.3s;
+  display: block;
+}
+
+@keyframes fadeout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    display: none;
+  }
 }
 
 .close-icon {
-    display: flex;
-    justify-content: flex-end;
-    font-size: 24px;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 24px;
 }
 
 .mobile-options {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding-top: 24px;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding-top: 24px;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 .mobile-option {
-    font-size: 24px;
-    margin: 12px 0px;
-    display: flex;
+  font-size: 24px;
+  margin: 12px 0px;
+  display: flex;
 }
 
 .mobile-option a {
-    text-decoration: none;
-    color: black;
-    display: flex;
+  text-decoration: none;
+  color: black;
+  display: flex;
 }
