--- a/src/components/body/projects/project-card.css
+++ b/src/components/body/projects/project-card.css
@@ -8,7 +8,10 @@
 }
 
 .project-photo {
-    width: 40%;
+    width: 100%;
+    max-width: 300px;
+    height:  auto;
+    margin-right: 100px;
 }
 
 .project-info {
@@ -75,6 +78,8 @@
 
     .project-photo {
         width: 70%;
+        margin-right: 0px;
+
     }
 
     .project-card {
